--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -29,7 +29,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        neovim_version: ["v0.10.4", "v0.11.3", "nightly"]
+        neovim_version: ["v0.11.3", "nightly"]
         include:
           - os: macos-latest
             neovim_version: v0.11.3
